--- a/iac/homework/counter-logs/app/package.json
+++ b/iac/homework/counter-logs/app/package.json
@@ -12,6 +12,7 @@
     "aws-sdk": "^2.771.0",
     "aws-xray-sdk": "^3.2.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql": "^2.15.15"
   }
 }
